added new class for articles about artists

--- a/previous_artists/barney.html
+++ b/previous_artists/barney.html
@@ -24,7 +24,7 @@
 <img class="img-artist" src ="../images/barney.jpg" alt="Barney Artist">  
 <h3>Barney Artist</h3>
 <p class="author">by Noemi, 01.01.2021</p>
-<p>Barney Artist is the laid-back, seriously woke rap maestro that demands your attention. The 26-year-old east Londoner fuses 90s era boom bap hip-hop with jazz for a refreshing 
+<p class="text-artist">Barney Artist is the laid-back, seriously woke rap maestro that demands your attention. The 26-year-old east Londoner fuses 90s era boom bap hip-hop with jazz for a refreshing 
     sound harkening back to legends such as A Tribe Called Quest and The Roots, and taking influence from prolific UK artists including Kano and Ghostpoet. His sprawling content, 
     consisting of love, loss and religion, is incredibly see through and relatable, as he guides the listener through his multifaceted life. Set to release his debut album later 
     this year, the follow up to 2014 mixtape Bespoke and 2016’s Painting Sounds, he is laying down yet more bricks of his life, mapping out an overall journey of self-discovery and growth. 
