--- a/previous_artists/celeste.html
+++ b/previous_artists/celeste.html
@@ -24,7 +24,7 @@
 <img class="img-artist" src ="../images/celeste.jpg" alt="Celeste">
 <h3>Celeste</h3>
 <p class="author">by Noemi, 01.01.2021</p>
-       <p>If British singer-songwriter Celeste isn’t already on your radar, chances are you’ll be her biggest fan by the end of the year. 
+       <p class="text-artist">If British singer-songwriter Celeste isn’t already on your radar, chances are you’ll be her biggest fan by the end of the year. 
        The 26-year-old artist recently won BBC’s Sound of 2020, and took home the Brit Rising Star Award—a kind of barometer of future success (previous winners include Sam Smith, Haim, and Adele).
        “I find those things really encouraging, but I try not to let it go to my head too much,” Celeste told Vogue. “There’s still a lot more to do.”
        Celeste is laying a bit of that groundwork with her new single “I Can See The Change,” produced by recent Grammy winner Finneas. 
