--- a/previous_artists/joy.html
+++ b/previous_artists/joy.html
@@ -24,7 +24,7 @@
 <img class="img-artist" src ="../images/joy.jpg" alt="Joy Crookes">
 <h3>Joy Crookes</h3>
 <p class="author">by Noemi, 01.01.2021</p>
-<p>Joy Crookes is 19 year old south London born songstress straddling soul, trip-hop and R&B. Half-Bengali/Half-Irish in heritage; 
+<p class="text-artist">Joy Crookes is 19 year old south London born songstress straddling soul, trip-hop and R&B. Half-Bengali/Half-Irish in heritage; 
         Joy’s is a dexterous sound, which effortlessly showcases her melting pot of sonic influences. Joy balances the retro stylings of 
         Sade with the millennial wit of Lily Allen – songs that aren’t afraid to be honest and raw, while also packing a political punch. 
         She may be looking to the past, but smart, talented and strong, she is shaping the sound of the future.</p>
