--- a/code/index.html
+++ b/code/index.html
@@ -16,7 +16,7 @@
       <nav>
         <div><a href="../code/index.html">Home</a></div>
         <div>Concerts</div>
-        <div>Events</div>
+        <div>Releases</div>
         <div>About</div>
       </nav>
     </header>
@@ -36,6 +36,7 @@
       <section class="artists">
       <div class="artistcards">
         <div class="loyle">
+            <img class="img-artistcards" src="../images/loyle.jpg" alt="Loyle Carner">
             <a href="../previous_artists/loyle.html">
             <h3>Loyle Carner</h3>
               <p class="author">by Noemi, 01.01.2021</p>
@@ -46,6 +47,7 @@
 
       <div class="artistcards">
         <div class="barney">
+          <img class="img-artistcards" src="../images/barney.jpg" alt="Barney Artist">
           <a href="../previous_artists/barney.html">
           <h3>Barney Artist</h3>
             <p class="author">by Noemi, 01.01.2021</p>
@@ -56,6 +58,7 @@
 
       <div class="artistcards">
         <div class="celeste"> 
+          <img class="img-artistcards" src="../images/celeste.jpg" alt="Celeste">
           <a href="../previous_artists/celeste.html">
           <h3>Celeste</h3>
             <p class="author">by Noemi, 01.01.2021</p>
@@ -66,6 +69,7 @@
         
       <div class="artistcards">
         <div class="cleo">
+          <img class="img-artistcards" src="../images/cleo.jpg" alt="Cleo Sol">
           <a href="../previous_artists/cleo.html">
           <h3>Cleo Sol</h3>
           <p class="author">by Noemi, 01.01.2021</p>  
@@ -76,6 +80,7 @@
 
       <div class="artistcards">   
         <div class="foxwarren">
+          <img class="img-artistcards" src="../images/foxwarren.jpg" alt="Foxwarren">
           <a href="../previous_artists/foxwarren.html">
           <h3>Foxwarren</h3>
           <p class="author">by Noemi, 01.01.2021</p>  
@@ -87,6 +92,7 @@
 
       <div class="artistcards"> 
         <div class="joy">
+          <img class="img-artistcards" src="../images/joy.jpg" alt="Joy Crookes">
           <a href="../previous_artists/joy.html">
           <h3>Joy Crookes</h3>
           <p class="author">by Noemi, 01.01.2021</p>  
@@ -97,6 +103,7 @@
         
       <div class="artistcards">
         <div class="arlo">
+          <img class="img-artistcards" src="../images/arlo.jpg" alt="Arlo Parks">
           <a href="../previous_artists/arlo.html">
           <h3>Arlo Parks</h3>
           <p class="author">by Noemi, 01.01.2021</p>  
