--- a/previous_artists/foxwarren.html
+++ b/previous_artists/foxwarren.html
@@ -24,7 +24,7 @@
 <img class="img-artist" src ="../images/foxwarren.jpg" alt="Foxwarren">
 <h3>Foxwarren</h3>
 <p class="author">by Noemi, 01.01.2021</p>
-<p>Foxwarren’s backstory reads like a page torn from the manual of rock & roll authenticity, as this group of siblings and childhood 
+<p class="text-artist">Foxwarren’s backstory reads like a page torn from the manual of rock & roll authenticity, as this group of siblings and childhood 
 friends originally formed more than a decade ago. Growing up in scattered small towns across the Canadian prairies, Andy Shauf 
 (guitars/keys/vocals), Dallas Bryson (guitar/vocals), and brothers Darryl Kissick (bass) and Avery Kissick (drums & percussion) 
 eventually found themselves in Regina, Saskatchewan. The initial sessions for their self-titled debut began in the Kissicks’ 
