--- a/previous_artists/loyle.html
+++ b/previous_artists/loyle.html
@@ -24,7 +24,7 @@
 <img class="img-artist" src ="../images/loyle.jpg" alt="Loyle Carner">
 <h3>Loyle Carner</h3>
 <p class="author">by Noemi, 01.01.2021</p>
-<p>Loyle Carner has shared a new song "Yesterday." The track is produced by Madlib and is the British rapper's first release since 2019 album Not Waving, But Drowning.
+<p class="text-artist">Loyle Carner has shared a new song "Yesterday." The track is produced by Madlib and is the British rapper's first release since 2019 album Not Waving, But Drowning.
     “It’s no secret Madlib is my musical hero,” Carner said in a statement. “I wrote this almost 2 years ago, but at first had trouble with clearing the sample and 
     thought it would never see the light of day. It’s really just about what it is to be black and white, in a world where you pretty much have to be one or the other. 
     It hurts the way I felt about my race back then, is the same way I feel now. Nothing has changed since my last entry, nothing has changed since the last century. 
