added container to small news & worked on media queries for big news responsiveness

--- a/code/index.html
+++ b/code/index.html
@@ -8,14 +8,15 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital@0;1&display=swap" rel="stylesheet">
 
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
   <!-- dont forget the meta tag for responsiveness -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
   <header class="header">
     <!-- Some kind of logo and navbar -->
-
     <div class="hamburger">
       <div></div>
       <div></div>
@@ -23,19 +24,17 @@
     </div>
 
     <img class=logo src="Summer-Palm-Tree-1-2015060917.svg">
-    <h1>Island Life</h1>
+    <h1>Island News</h1>
 
     <nav>
-      <a href="/Accomadation/">Accomadation</a>
-      <a href="/Tours/">Tours</a>
+      <a href="/About/">About</a>
+      <a href="/Sign in/">Sign in</a>
       <a href="Contact us/">Contact us</a>
     </nav>
 
-
-
   </header>
-
-  <section class="big-news">
+  
+  <div class="big-news">
     <!-- The big news content -->
     <section class="main-big-news">
       <img src="nice-life2.jpg" alt="cliffs and ocean">
@@ -48,34 +47,21 @@
           pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. 
           Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. 
           In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. 
-
-
         </p>
       </article>
     </section>
-  </section>
+  </div>
 
+<section class="container-small-news">
   <section class="small-news">
-    <section class="small-news-container"></section>
     <!-- The other news  -->
-
-
     <section class="news">
       <div>
         <a href="a">
           <img src="SUP.jpg" alt="SUP on ocean">
-          <h5>Rubrik</h5>
-          <p>text text text</p>
-        </a>
-      </div>
-    </section>
-
-    <section class="news">
-      <div>
-        <a href="A">
-          <img src="SUP.jpg" alt="SUP on ocean">
-          <h5>Rubrik</h5>
-          <p>text text text</p>
+          <h5>New Surf Loge</h5>
+          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
+            Aenean commodo ligula eget dolor. Aenean massa. </p>
         </a>
       </div>
     </section>
@@ -85,7 +71,19 @@
         <a href="a">
           <img src="SUP.jpg" alt="SUP on ocean">
           <h5>Rubrik</h5>
-          <p>text text text</p>
+          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
+            Aenean commodo ligula eget dolor. Aenean massa. </p>
+        </a>
+      </div>
+    </section>
+
+    <section class="news">
+      <div>
+        <a href="a">
+          <img src="SUP.jpg" alt="SUP on ocean">
+          <h5>Rubrik</h5>
+          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
+            Aenean commodo ligula eget dolor. Aenean massa. </p>
         </a>
       </div>
     </section>
@@ -95,7 +93,8 @@
         <a href="a">
           <img src="yoga.jpg" alt="yoga pose">
           <h5>Rubrik</h5>
-          <p>text text text</p>
+          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
+            Aenean commodo ligula eget dolor. Aenean massa. </p>
         </a>
       </div>
     </section>
@@ -105,7 +104,8 @@
         <a href="a">
           <img src="yoga.jpg" alt="yoga pose">
           <h5>Rubrik</h5>
-          <p>text text text</p>
+          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
+            Aenean commodo ligula eget dolor. Aenean massa. </p>
         </a>
       </div>
     </section>
@@ -115,15 +115,20 @@
         <a href="a">
           <img src="yoga.jpg" alt="yoga pose">
           <h5>Rubrik</h5>
-          <p>text text text</p>
+          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
+            Aenean commodo ligula eget dolor. Aenean massa. </p>
         </a>
       </div>
     </section>
-
-
-
   </section>
-
+</section>
+  <footer class="footer">
+    <div class="icons">
+        <a href="#" class="fa fa-facebook"></a>
+        <a href="#" class="fa fa-twitter"></a>
+        <a href="#" class="fa fa-instagram"></a>
+    </div>
+  </footer>
 </body>
 
 </html>
