insertion of footer and clean-up of css

--- a/code/index.html
+++ b/code/index.html
@@ -22,9 +22,8 @@
 
 
   <section class="big-news-section">
-    <h3>Big News</h3>  
-    <div class="polaroid-big">
-      
+    <h3>Big News</h3>
+    <div class="polaroid">
       <img
         src="https://images.unsplash.com/photo-1514412076816-d228b5c0973c?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80"
         alt="Flock of birds over water" style="width:100%">
@@ -37,7 +36,7 @@
   </section>
 
   <section class="other-news-section">
-    <h3>Other News</h3> 
+    <h3>Other News</h3>
     <div class="polaroid">
       <img class="polariod-picture"
         src="https://images.unsplash.com/photo-1493236296276-d17357e28888?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1502&q=80"
@@ -75,7 +74,9 @@
     </div>
     <!-- The other news  -->
   </section>
-  </div>
+  <footer class="footer">made with &#128154; and too much effort</footer>
+
+
 </body>
 
 </html>
