--- a/code/index.html
+++ b/code/index.html
@@ -74,17 +74,19 @@
         </div>
         <div class="news-item">
           <a href="#">
-          <img class="news-img" src="images/placeholder.jpg" />
+          <img class="news-img" src="images/news3.png" alt="Dog sitting in front of a laptop" />
           <div class="news-item-text">
-          <h2 class="news-item-title">NEWS 3</h2>
+            <small>NEWS</small>
+          <h2 class="news-item-title">Bringing your dog to work now considered human right</h2>
         </div>
         </a>
         </div>
         <div class="news-item">
           <a href="#">
-          <img class="news-img" src="images/placeholder.jpg" />
+          <img class="news-img" src="images/news4.jpg" alt="Female soccor players cheering on field"/>
           <div class="news-item-text">
-          <h2 class="news-item-title">NEWS 4</h2>
+            <small>SPORTS</small>
+          <h2 class="news-item-title">Female soccor to get as much funding and screentime as male soccor</h2>
         </div>
         </a>
         </div>
@@ -93,7 +95,7 @@
       <section class="interview">
         <a href="#">
         <h1 class="interview-headline">INTERVIEW.</h1>
-        <img class="interview-img" src="Images/free-britney.png" />
+        <img class="interview-img" src="Images/free-britney.png" alt="Google search field with the text #FreeBrithey" />
         <h2 class="interview-quote">
           Britney about her comeback as a free artist:<br> ”Without the #FreeBritney campaign it would not have been possible”
         </h2>
