split up mainarticle in two boxes, display flex
the mainarticle is now beside the img on tablet and desktop as required

--- a/code/index.html
+++ b/code/index.html
@@ -23,14 +23,15 @@
     
       <section class="mainarticle">
         <img class="img-artist" src ="../images/priya.jpg" alt="Priya Ragu">
-        <h2>Priya Ragu</h2>
-        <p class="author">by Noemi, 01.01.2021</p>
-        <p class="p-mainarticle">
-        The child of Sri Lankan parents, Ragu would sing in Tamil at family functions and made her stamp on the Zurich music scene from an early age. She just never thought her music would be heard by millions.
-        Ragu’s slick production is all down to her rapper brother Japhna Gold, proving it pays to keep it in the family. Together the duo have developed a signature sound, blending raspy vocals with an electro-pop beat that often nods to their South Indian heritage.
-        Debut single Good Love 2.0 is an absolute banger, guaranteed to get stuck in your head. If you haven’t already heard it played via Annie Mac on Radio 1 or on Radio 1Xtra earlier this year, you no doubt will have caught it on loop while playing FIFA 21.
-        For now, Ragu is working on getting her tracks out into the world and gearing up for the day she can finally perform live. ​“I just hope that we can tour, she says. ​“We just created a band, so it would be dope if we could play live again and create memories, you know.”
-        Listen to Good Love 2.0 below and get your 100% fill with Priya Ragu.</p>
+        <div class="big-news"><h2>Priya Ragu</h2>
+          <p class="author">by Noemi, 01.01.2021</p>
+          <p class="p-mainarticle">
+          The child of Sri Lankan parents, Ragu would sing in Tamil at family functions and made her stamp on the Zurich music scene from an early age. She just never thought her music would be heard by millions.
+          Ragu’s slick production is all down to her rapper brother Japhna Gold, proving it pays to keep it in the family. Together the duo have developed a signature sound, blending raspy vocals with an electro-pop beat that often nods to their South Indian heritage.
+          Debut single Good Love 2.0 is an absolute banger, guaranteed to get stuck in your head. If you haven’t already heard it played via Annie Mac on Radio 1 or on Radio 1Xtra earlier this year, you no doubt will have caught it on loop while playing FIFA 21.
+          For now, Ragu is working on getting her tracks out into the world and gearing up for the day she can finally perform live. ​“I just hope that we can tour, she says. ​“We just created a band, so it would be dope if we could play live again and create memories, you know.”
+          Listen to Good Love 2.0 below and get your 100% fill with Priya Ragu.</p>
+        </div> 
       </section>
 
       <section class="artists">
