Updated big news to include a p of text for desktop

--- a/code/index.html
+++ b/code/index.html
@@ -45,7 +45,11 @@
               Anders Tegnell: "We are confident that we are now out of the
               woods."</strong>
           </p>
-          <p>Read more</p></a>
+          <p class="more-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed in auctor leo, nec rutrum libero. Cras lacinia fermentum rhoncus. Nunc tempus, est in posuere eleifend, odio elit finibus tellus, eget pulvinar neque mi at ligula. Phasellus velit erat, fermentum eu iaculis ac, aliquam ut sapien. Praesent dignissim, dolor id venenatis sollicitudin, nunc tortor viverra turpis, sit amet vulputate ex lacus ac nibh. <br><br>Donec ut mauris sed ante gravida dapibus. Etiam dolor tortor, auctor elementum feugiat vitae, bibendum vel felis. Pellentesque finibus mi ut ex tempor porta.
+
+            Morbi euismod vitae felis vitae malesuada. Phasellus faucibus vehicula gravida. Integer sed interdum nisl, in eleifend ex. Proin ut elit id leo tempus pharetra. Cras varius tellus a aliquam ultricies. Nulla facilisi. Quisque id feugiat tellus. Donec lobortis neque eu ipsum condimentum, eget commodo diam viverra. Pellentesque commodo urna neque, eu consequat magna rhoncus nec. Vivamus luctus dui ac bibendum rutrum. Donec maximus dolor tincidunt eros rutrum sodales. Etiam imperdiet aliquet sem vitae accumsan. Suspendisse placerat suscipit lectus. <br><br>Suspendisse justo ante, varius a cursus ut, consectetur at libero. Sed et justo nec lacus posuere eleifend ut et sem. Duis lobortis est ut elit porta consequat. Curabitur nisi mi, condimentum nec elementum at, bibendum sed massa.</p>
+          <a class="read-more" href="#"><strong>Read more</strong></a>
+          </a>
         </div>
     </section>
         <!-- NEWS GROUP -->
