--- a/code/index.html
+++ b/code/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Project 2: The News Site</title>
+    <title>GOOD NEWS ONLY</title>
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;800&family=Jacques+Francois+Shadow&display=swap" rel="stylesheet">
@@ -12,10 +13,8 @@
   <body>
 
     <!-- HEADER -->
-
     <header>
-        <div class="logo-container"> 
-        <!-- <img class="logo" src="Images/logo.png"/> -->
+      <div class="logo-container"> 
         <h1 class="logo">GOOD <br>NEWS <br>ONLY</h1>
         <video class="logo-video" autoplay muted loop>
           <source src="Images/logo-film.mp4" type="video/mp4">
