mobile first html before changing

--- a/code/index.html
+++ b/code/index.html
@@ -31,8 +31,9 @@
 <!-- The big news content -->
 
         <article class="bread">
-          <h2>Kneading Bread!</h2>
-          <img src="bread2.jpg" alt="kneadingbread">
+          <img src="kneading.jpg" alt="kneadingbread">
+          <h6>KITCHEN NOTES</h6>
+          <h3>The psychology of kneading bread</h3>
         </article>
             
       </section>
@@ -40,34 +41,29 @@
         <section class="other-news">
           <!-- The other news  -->
 
-          <article class="faceyoga">
-          <h2>Face Yoga</h2>
-          <img src="faceyoga.jpg" alt="faceyoga">
+          <article class="home">
+          <img src="home.jpg" alt="home">
+          <div><h6>INTERIOR</h6>
+          <h3>How Corona has shaped the home of tomorrow</h3></div>
         </article>
+        
 
         <article class="chairs">
-          <h2>We are out of chairs</h2>
-          <img src="chair.jpg" alt="chair">
+          <img src="chairs.jpg" alt="chair">
+          <h6>DAILY</h6>
+          <h3>Home-office perks</h3>
+
         </article>
 
         <article class="internet">
-          <h2>Streaming is big</h2>
           <img src="internet.jpg" alt="internet">
+          <h6>DAILY</h6>
+          <h3>Streaming continues to skyrocket</h3>
         </article>
 
-        <article>
-          <h2></h2>
-          <img src="" alt="">
-        </article>
-
-        <article>
-          <h2></h2>
-          <img src="" alt="">
-        </article>
-
-        <article>
-          <h2></h2>
-          <img src="" alt="">
+        <article class="officecovid"><img src="officecovid.jpg" alt="">
+          <h6>SCIENCE</h6>
+          <h3>BLABKABKABKABKABAKKBA</h3>
         </article>
 
       </section>
