worked on responsiveness 667-1024

--- a/code/index.html
+++ b/code/index.html
@@ -4,8 +4,11 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Project 2: The News Site</title>
+  <title>A birds eye view</title>
   <link rel="stylesheet" href="./style.css" />
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Concert+One&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -23,7 +26,7 @@
 
   <section class="big-news-section">
     <h3>Big News</h3>
-    <div class="polaroid">
+    <div class="polaroid-big">
       <img
         src="https://images.unsplash.com/photo-1514412076816-d228b5c0973c?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80"
         alt="Flock of birds over water" style="width:100%">
@@ -36,9 +39,8 @@
   </section>
 
   <section class="other-news-section">
-    <h3>Other News</h3>
     <div class="polaroid">
-      <img class="polariod-picture"
+      <img class="polaroid-picture"
         src="https://images.unsplash.com/photo-1493236296276-d17357e28888?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1502&q=80"
         alt="Small bird looking left" style="width:100%">
       <div class="text-container">
