maine-site now responsive on all devices

--- a/code/index.html
+++ b/code/index.html
@@ -24,7 +24,7 @@
       <section class="mainarticle">
         <img class="img-artist" src ="../images/priya.jpg" alt="Priya Ragu">
         <div class="big-news"><h2>Priya Ragu</h2>
-          <p class="author">by Noemi, 01.01.2021</p>
+          <p class="author-mainarticle">by Noemi, 01.01.2021</p>
           <p class="p-mainarticle">
           The child of Sri Lankan parents, Ragu would sing in Tamil at family functions and made her stamp on the Zurich music scene from an early age. She just never thought her music would be heard by millions.
           Ragu’s slick production is all down to her rapper brother Japhna Gold, proving it pays to keep it in the family. Together the duo have developed a signature sound, blending raspy vocals with an electro-pop beat that often nods to their South Indian heritage.
