artists site also responsive on all devices

--- a/code/index.html
+++ b/code/index.html
@@ -22,7 +22,7 @@
     </header>
     
       <section class="mainarticle">
-        <img class="img-artist" src ="../images/priya.jpg" alt="Priya Ragu">
+        <img class="img-mainartist" src ="../images/priya.jpg" alt="Priya Ragu">
         <div class="big-news"><h2>Priya Ragu</h2>
           <p class="author-mainarticle">by Noemi, 01.01.2021</p>
           <p class="p-mainarticle">
