--- a/previous_artists/foxwarren.html
+++ b/previous_artists/foxwarren.html
@@ -21,8 +21,8 @@
       </nav>
     </header>
 
-<img class="img-artist" src ="../images/foxwarren.jpg" alt="Foxwarren">
-<h3>Foxwarren</h3>
+<img class="img-artistcards" src ="../images/foxwarren.jpg" alt="Foxwarren">
+<h4>Foxwarren</h4>
 <p class="author">by Noemi, 01.01.2021</p>
 <p class="text-artist">Foxwarren’s backstory reads like a page torn from the manual of rock & roll authenticity, as this group of siblings and childhood 
 friends originally formed more than a decade ago. Growing up in scattered small towns across the Canadian prairies, Andy Shauf 
