--- a/previous_artists/joy.html
+++ b/previous_artists/joy.html
@@ -21,8 +21,8 @@
       </nav>
     </header>
 
-<img class="img-artist" src ="../images/joy.jpg" alt="Joy Crookes">
-<h3>Joy Crookes</h3>
+<img class="img-artistcards" src ="../images/joy.jpg" alt="Joy Crookes">
+<h4>Joy Crookes</h4>
 <p class="author">by Noemi, 01.01.2021</p>
 <p class="text-artist">Joy Crookes is 19 year old south London born songstress straddling soul, trip-hop and R&B. Half-Bengali/Half-Irish in heritage; 
         Joy’s is a dexterous sound, which effortlessly showcases her melting pot of sonic influences. Joy balances the retro stylings of 
