--- a/previous_artists/loyle.html
+++ b/previous_artists/loyle.html
@@ -21,8 +21,8 @@
       </nav>
     </header>
 
-<img class="img-artist" src ="../images/loyle.jpg" alt="Loyle Carner">
-<h3>Loyle Carner</h3>
+<img class="img-artistcards" src ="../images/loyle.jpg" alt="Loyle Carner">
+<h4>Loyle Carner</h4>
 <p class="author">by Noemi, 01.01.2021</p>
 <p class="text-artist">Loyle Carner has shared a new song "Yesterday." The track is produced by Madlib and is the British rapper's first release since 2019 album Not Waving, But Drowning.
     “It’s no secret Madlib is my musical hero,” Carner said in a statement. “I wrote this almost 2 years ago, but at first had trouble with clearing the sample and 
