--- a/previous_artists/celeste.html
+++ b/previous_artists/celeste.html
@@ -21,8 +21,8 @@
       </nav>
     </header>
 
-<img class="img-artist" src ="../images/celeste.jpg" alt="Celeste">
-<h3>Celeste</h3>
+<img class="img-artistcards" src ="../images/celeste.jpg" alt="Celeste">
+<h4>Celeste</h4>
 <p class="author">by Noemi, 01.01.2021</p>
        <p class="text-artist">If British singer-songwriter Celeste isn’t already on your radar, chances are you’ll be her biggest fan by the end of the year. 
        The 26-year-old artist recently won BBC’s Sound of 2020, and took home the Brit Rising Star Award—a kind of barometer of future success (previous winners include Sam Smith, Haim, and Adele).
