--- a/previous_artists/cleo.html
+++ b/previous_artists/cleo.html
@@ -21,8 +21,8 @@
       </nav>
     </header>
 
-<img class="img-artist" src ="../images/cleo.jpg" alt="Cleo Sol">
-<h3>Cleo Sol</h3>
+<img class="img-artistcards" src ="../images/cleo.jpg" alt="Cleo Sol">
+<h4>Cleo Sol</h4>
 <p class="author">by Noemi, 01.01.2021</p>
 <p class="text-artist">20 year old Cleo Sol was born to musical parents who met in a Jazz band. Her Mum, half Serbian and Spanish, is a singer and plays 
 the guitar and flute. Cleo’s Jamaican Dad plays the bass and piano. Cleo quickly became the singer in the family, jostling for attention 
