--- a/code/index.html
+++ b/code/index.html
@@ -54,7 +54,7 @@
             <div class="big-news-card">
                 <img class="news-image" src="./images/big-news-3.jpg" alt="News related image">
                 <div class="news-article">
-                    <h1 class="news-header">Sweden’s best ski resorts</h1>
+                    <h1 class="news-header">The best ski resorts in Sweden</h1>
                     <p class="news-text">Sweden is home to some of the most vibrant and welcoming ski resorts in Europe.</p>
                 </div>
             </div>
