--- a/code/index.html
+++ b/code/index.html
@@ -10,16 +10,15 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&family=Roboto&family=Noto+Sans+JP:wght@100&display=swap"
     rel="stylesheet">
-
-      <!-- Font Awesome-->
+  <!-- FONT AWESOME-->
   <script src="https://kit.fontawesome.com/2a823c4f0d.js" crossorigin="anonymous"></script>
 
 </head>
 
 <body>
-  <header>
-    <!-- Logo and navbar -->
 
+  <!-- LOGO AND NAVBAR -->
+  <header class="header container">
     <img src="images/vintage-1064142_640.png" class="logo-image" alt="Logo image">
     <h1>TRAVEL NEWS</h1>
     <nav>
@@ -27,18 +26,17 @@
       <a href="#">BOOKINGS</a>
       <a href="#">CONTACT</a>
     </nav>
-    <a href="#" class="menu-link"> 
-      <div class="menu-bars"> 
+    <a href="#" class="menu-link">
+      <div class="menu-bars">
         <div></div>
         <div></div>
         <div></div>
       </div>
-    
     </a>
   </header>
 
-  <section class="big-news">
-    <!-- BIG NEWS SECTION -->
+  <!-- BIG NEWS SECTION -->
+  <section class="big-news container">
     <div class="big-news-img">
       <img src="images/river-5662293_640.jpg" alt="River image">
     </div>
@@ -49,8 +47,8 @@
     </div>
   </section>
 
-  <section class="small-news">
-    <!-- SMALL NEWS SECTION  -->
+  <!-- SMALL NEWS SECTION  -->
+  <section class="small-news container">
     <div class="news-card">
       <img src="images/building-66789_640.jpg" alt="Building image">
       <div class="small-news-text">
@@ -125,13 +123,14 @@
 
   </section>
 
-  <footer>
+  <!-- FOOTER  -->
+  <footer class="footer container">
     <div>
       <h3>TRAVEL NEWS</h3>
       <p>Contact us</p>
       <p>Subscribe</p>
       <p>Customer Service</p>
-    </div> 
+    </div>
     <div>
       <i class="footer-logo fab fa-twitter"></i>
       <i class="footer-logo fab fa-facebook-f"></i>
