added README, added hover effect on hamburger menue so it can be detected when user scroll further down. Cleaned the code from small mistakes

--- a/code/index.html
+++ b/code/index.html
@@ -2,11 +2,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8"> <!-- I have removed a / after -8" -->
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie-edge">
     <title>The Daily Deep Dive</title>
-    <link rel="stylesheet" href="./style.css"> <!-- I have removed a / after css" -->
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body class="body">
     <header>
@@ -70,7 +70,6 @@
       <div>
         <img class="grid-img" src="assets/falco-negenman--f2sJr-PJDA-unsplash.jpg" alt="Jellyfish">       
       </div>
-      <!-- new img -->
       <div >
         <img class="grid-img" src="assets/bernard-hermant--ufym5Rdqs4-unsplash.jpg" alt="Jellyfish"> 
       </div>
@@ -81,7 +80,7 @@
         <img class="grid-img" src="assets/karan-karnik-w7WVYjY8c5w-unsplash.jpg" alt="Jellyfish">
       </div>
       <div>
-          <img class="grid-img" src="assets/joel-filipe-_AjqGGafofE-unsplash.jpg" alt="Jellyfish">
+        <img class="grid-img" src="assets/joel-filipe-_AjqGGafofE-unsplash.jpg" alt="Jellyfish">
       </div>
       <div>
         <img class="grid-img" src="assets/ashleigh-robertson-zoA8uW7jvP0-unsplash.jpg" alt="Jellyfish"> 
