--- a/code/index.html
+++ b/code/index.html
@@ -19,7 +19,7 @@
 
   <!-- LOGO AND NAVBAR -->
   <header class="header container">
-    <img src="images/vintage-1064142_640.png" class="logo-image" alt="Logo image">
+    <img src="./images/vintage-1064142_640.png" class="logo-image" alt="Logo image">
     <h1>TRAVEL NEWS</h1>
     <nav>
       <a href="#">NEW</a>
@@ -38,7 +38,7 @@
   <!-- BIG NEWS SECTION -->
   <section class="big-news container">
     <div class="big-news-img">
-      <img src="images/river-5662293_640.jpg" alt="River image">
+      <img src="./images/river-5662293_640.jpg" alt="River image">
     </div>
     <div class="big-news-text">
       <h2>NEXT ADVENTURE</h2>
@@ -50,7 +50,7 @@
   <!-- SMALL NEWS SECTION  -->
   <section class="small-news container">
     <div class="news-card">
-      <img src="images/building-66789_640.jpg" alt="Building image">
+      <img src="./images/building-66789_640.jpg" alt="Building image">
       <div class="small-news-text">
         <h3>HOTEL NEWS</h3>
         <p>Excepteur sint occaecat cupidatat non proident,
@@ -59,7 +59,7 @@
     </div>
 
     <div class="news-card">
-      <img src="images/bed-4416515_640.jpg" alt="Bed image">
+      <img src="./images/bed-4416515_640.jpg" alt="Bed image">
       <div class="small-news-text">
         <h3>ROOMS</h3>
         <p>Excepteur sint occaecat cupidatat non proident,
@@ -68,7 +68,7 @@
     </div>
 
     <div class="news-card">
-      <img src="images/architecture-1837150_640.jpg" alt="Lobby image">
+      <img src="./images/architecture-1837150_640.jpg" alt="Lobby image">
       <div class="small-news-text">
         <h3>NEWS HOTEL DESIGN</h3>
         <p>Excepteur sint occaecat cupidatat non proident,
@@ -77,7 +77,7 @@
     </div>
 
     <div class="news-card">
-      <img src="images/woman-4373078_640.jpg" alt="Poolside image">
+      <img src="./images/woman-4373078_640.jpg" alt="Poolside image">
       <div class="small-news-text">
         <h3>NEW POOL</h3>
         <p>Excepteur sint occaecat cupidatat non proident,
@@ -86,7 +86,7 @@
     </div>
 
     <div class="news-card">
-      <img src="images/adult-1845108_640.jpg" alt="City image">
+      <img src="./images/adult-1845108_640.jpg" alt="City image">
       <div class="small-news-text">
         <h3>CITY TRAVELLING</h3>
         <p>Excepteur sint occaecat cupidatat non proident,
@@ -95,7 +95,7 @@
     </div>
 
     <div class="news-card">
-      <img src="images/kayak-5543935_640.jpg" alt="Kayak image">
+      <img src="./images/kayak-5543935_640.jpg" alt="Kayak image">
       <div class="small-news-text">
         <h3>SPORT</h3>
         <p>Excepteur sint occaecat cupidatat non proident,
@@ -104,7 +104,7 @@
     </div>
 
     <div class="news-card">
-      <img src="images/mountaineers-5649828_640.jpg" alt="Hiker image">
+      <img src="./images/mountaineers-5649828_640.jpg" alt="Hiker image">
       <div class="small-news-text">
         <h3>HIKING</h3>
         <p>Excepteur sint occaecat cupidatat non proident,
@@ -113,7 +113,7 @@
     </div>
 
     <div class="news-card">
-      <img src="images/airport-384562_640.jpg" alt="Airport image">
+      <img src="./images/airport-384562_640.jpg" alt="Airport image">
       <div class="small-news-text">
         <h3>AIRPORT NEWS</h3>
         <p>Excepteur sint occaecat cupidatat non proident,
