changes to code

--- a/code/index.html
+++ b/code/index.html
@@ -4,19 +4,37 @@
     <meta charset="utf-8" />
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
+
     <header>
-      <!-- Some kind of logo and navbar -->
+        <img src="https://www.freelogodesign.org/file/app/client/thumb/42d1310f-e2b0-4181-8c6d-30c8f9d8cf6e_200x200.png?1611288460540" alt="Logo">
+        <h1>Sloth News</h1>
+      <nav>
+        <a href="#"> Link 1</a>
+        <a href="#"> Link 2</a>
+        <a href="#"> Link 3</a>
+      </nav>
+
     </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
+    <section class="news-page">
+
+        <img src="https://cdn.pixabay.com/photo/2015/04/20/13/25/sloth-731297_960_720.jpg">
+    
+        <div class="news-card1">
+        <blockquote cite="https://slothconservation.com/three-fingered-sloth-adopts-a-two-fingered-sloth-baby/">Three-fingered sloth 'adopts' a two-fingered sloth baby!</blockquote>
+        </div>
+
+        <div class="news-card2"></div>
+        <div class="news-card3"></div>
+        <div class="news-card4"></div>
+        <div class="news-card5"></div>
+        <div class="news-card6"></div>
+        <div class="news-card7"></div>
+
     </section>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
   </body>
 </html>
