Layout in blue color

--- a/code/index.html
+++ b/code/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8" />
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
@@ -29,45 +28,51 @@
       <section class="big-news">
         <div class="news-card-big">
           <img class="news-card-pic-big" src="/top_new.jpg" alt="Picture of a computer">
-          <p class="big-news-text">The World's 50 Most Innovative Companies of 2021"</p2> 
+          <p class="big-news-text">The World's 50 Most Innovative Companies of 2021</p2> 
+        </div>
+        <div class="news-card-big">
+          <img class="news-card-pic-big" src="/drone.jpg" alt="Picture of a drone">
+          <p class="big-news-text">4 Steps for Making an Excellent 3D Model With a Drone</p2> 
         </div>
       </section>
 
-    <h2>Top news</h2>
+    <div class="news-section"><h2>Top news</h2></div>
     <section class="other-news">
-      <div class="news-card-type">
-        
+      <div class="news-card">
+        <img class="news-card-pic" src="/computer-screen.jpg" alt="Picture of a computer screen">
+        <p class="news-card-text">Hackers targeted Covid vaccine supply 'cold chain'</p>
       </div>
       <div class="news-card">
         <img class="news-card-pic" src="/robot.jpg" alt="Picture of a robot">
-        <p class="news-card-text">Some text about the news article</p>
+        <p class="news-card-text">Robot Displays a Glimmer of Empathy to a Partner Robot</p>
       </div>
       <div class="news-card">
         <img class="news-card-pic" src="/tech_pic.jpg" alt="Picture of a computers">
-        <p class="news-card-text">Some text about the news article</p>
+        <p class="news-card-text">Coronavirus: How the world of work may change forever</p>
       </div>
         <div class="news-card">
         <img class="news-card-pic" src="/watch_pic.jpg" alt="Picture of a watch">
-        <p class="news-card-text">Some text about the news article</p>
+        <p class="news-card-text">How to keep fit with Apple Watch: A complete guide</p>
       </div>
     </section>
 
-    <h2>Latest</h2>
+    <div class="news-section"><h2>Latest</h2></div>
     <section class="other-news">
-      <div class="news-card-type">
-
+      <div class="news-card">
+        <img class="news-card-pic" src="/virtual-reality.jpg" alt="Picture of virtual reality">
+          <p class="news-card-text">The Best VR Headsets to Try 2021</p>
       </div>
       <div class="news-card">
           <img class="news-card-pic" src="/pet_photo.jpg" alt="Picture of a man and a dog">
-          <p class="news-card-text">Some text about the news article</p>
+          <p class="news-card-text">Pet Care Startup Rover Lays Off 41% of Workforce due to COVID-19 Impact</p>
       </div>
       <div class="news-card">
         <img class="news-card-pic" src="/instagram.jpg" alt="Picture of a man and a dog">
-        <p class="news-card-text">Some text about the news article</p>
+        <p class="news-card-text">The Top Instagram Updates You Need to Know: January 2021</p>
       </div>
       <div class="news-card">
         <img class="news-card-pic" src="/uber.jpg" alt="Picture of a man and a dog">
-        <p class="news-card-text">Some text about the news article</p>
+        <p class="news-card-text">Amazon Takes on Uber with Investment in Food Delivery Firm Deliveroo</p>
       </div>
     </section>
   </body>
