--- a/code/index.html
+++ b/code/index.html
@@ -24,7 +24,7 @@
       <article>
         <h2>Rubrik</h2>
         <div class="big-news-children">
-        <div class="img-container-one">
+        <div class="img-big-news">
           <img src="./USA.jpg" alt="Bild på en stor nyhet" width="500px">
         </div>
         <p class="big-news-text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
@@ -37,22 +37,22 @@
        
       <article class="small-news">
         <h3 class="title-three">Rubrik</h3>
-        <img class="image-container-two" src="./Taj-mahal.jpg" alt="Picture of Taj-mahal" width="300px">
+        <img class="img-small-news" src="./Taj-mahal.jpg" alt="Picture of Taj-mahal" width="300px">
       </article>
 
       <article class="small-news">
         <h3 class="title-three">Rubrik</h3>
-        <img class="image-container-two" src="./Fish.jpg" alt="Picture of fishes" width="300px">
+        <img class="img-small-news" src="./Fish.jpg" alt="Picture of fishes" width="300px">
         </article>
 
       <article class="small-news">
         <h3 class="title-three">Rubrik</h3>
-        <img class="image-container-two" src="./Argentina.jpg" alt="Picture of Argentinas flag" width="300px">
+        <img class="img-small-news" src="./Argentina.jpg" alt="Picture of Argentinas flag" width="300px">
       </article>
 
       <article class="small-news">
         <h3 class="title-three">Rubrik</h3>
-        <img class="image-container-two" src="./Elephants.jpg" alt="Picture of elephants" width="300px">
+        <img class="img-small-news" src="./Elephants.jpg" alt="Picture of elephants" width="300px">
       </article>
     </section>
   </body>
