--- a/code/index.html
+++ b/code/index.html
@@ -204,7 +204,7 @@
 
   <footer class="footer">
     <div class="rights">
-			All Rights reserved &copy;
+			All Rights reserved &#9996 &copy; 
 		</div>
   </footer>
 
