Changed html/css code to codepen code

--- a/code/index.html
+++ b/code/index.html
@@ -17,35 +17,32 @@
   <body class="container">
 
     <header class="header container">
-
-      <div class="mobile-menu"> <!--Hamburger Menu-->
-        <div></div>
-        <div></div>
-        <div></div>
+      <div class="left">
+        <div class="hamburger">hamburger</div>
+        <div class="logo">logo</div>
+        <div class="nameplate">Title</div>
       </div>
 
-      <div class="mobile-desktop"> <!--Only appears in mobile and desktop-->
-        <img class="logo" src="/assets/logo.png" alt="Guinea pig logo">
-        <img class="title" src="/assets/title.png" alt="Wheeeekly title image">
-       
-        <nav class="desktop-menu">
-          <a class="navigation-element" href="#">News</a>
-          <a class="navigation-element" href="#">Find A Rescue</a>
-          <a class="navigation-element" href="#">About Us</a>
-          <a class="navigation-element" href="#">Shop</a>        
-        </nav>
+      <div class="middle">
+        <div class="logo">logo</div>
       </div>
 
-      <div class="tablet">
-        <nav class="desktop-menu">
-          <a class="navigation-element" href="#">News</a>
-          <a class="navigation-element" href="#">Find A Rescue</a>
-          <img class="logo" src="/assets/logo.png" alt="Guinea pig logo">
-          <a class="navigation-element" href="#">About Us</a>
-          <a class="navigation-element" href="#">Shop</a>        
-        </nav>
+      <div class="right">
+        <div class="search">Search</div>
+        <div class="subscribe">subscribe</div>
+        <div class="login">Login</div>
       </div>
-
+      
+      <nav class=lower-menu>
+        <ul>
+          <li>Latest News</li>
+          <li>Tips & Tricks</li>
+          <li>Care Guides</li>
+          <li>Find a Rescue</li>
+          <li>About Us</li>
+          <li>Contact Us</li>
+        </ul>
+      </nav>
     </header>
 
     <section class="big-news">
