Made my polaroid picture(big news) grey scaled but colored when hover

--- a/code/index.html
+++ b/code/index.html
@@ -39,7 +39,7 @@
   <section class="big-news">    
       <div class="big-news-img">
       <img  src="./assets/next-trip-img.png" alt="Picture of a mountain" width="450px">
-      <p class="text-on-photo">#ALBANIA</p>
+      <p class="text-on-photo-big">#ALBANIA</p>
       </div>
     <div class="big-news-text">
       <h3>Next Trip</h3><br>
