added new images and adjusted padding to align big & small news

--- a/code/index.html
+++ b/code/index.html
@@ -16,21 +16,23 @@
 
 <body>
   <header class="header">
+
     <!-- Some kind of logo and navbar -->
+
     <div class="hamburger">
       <div></div>
       <div></div>
       <div></div>
-    </div>
+    </div> 
 
     <img class=logo src="Summer-Palm-Tree-1-2015060917.svg">
     <h1>Island News</h1>
 
     <nav>
       <a href="/About/">About</a>
-      <a href="/Sign in/">Sign in</a>
+      <a href="/Home/">Home</a>
       <a href="Contact us/">Contact us</a>
-    </nav>
+    </nav> 
 
   </header>
   
@@ -69,8 +71,8 @@
     <section class="news">
       <div>
         <a href="a">
-          <img src="SUP.jpg" alt="SUP on ocean">
-          <h5>Rubrik</h5>
+          <img src="beach.jpg" alt="house on beach">
+          <h5>Hollies Cove</h5>
           <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
             Aenean commodo ligula eget dolor. Aenean massa. </p>
         </a>
@@ -80,19 +82,8 @@
     <section class="news">
       <div>
         <a href="a">
-          <img src="SUP.jpg" alt="SUP on ocean">
-          <h5>Rubrik</h5>
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
-            Aenean commodo ligula eget dolor. Aenean massa. </p>
-        </a>
-      </div>
-    </section>
-
-    <section class="news">
-      <div>
-        <a href="a">
-          <img src="yoga.jpg" alt="yoga pose">
-          <h5>Rubrik</h5>
+          <img src="Food.jpg" alt="Food">
+          <h5>Jambos Restaurant</h5>
           <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
             Aenean commodo ligula eget dolor. Aenean massa. </p>
         </a>
@@ -103,7 +94,7 @@
       <div>
         <a href="a">
           <img src="yoga.jpg" alt="yoga pose">
-          <h5>Rubrik</h5>
+          <h5>Join Island Yoga</h5>
           <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
             Aenean commodo ligula eget dolor. Aenean massa. </p>
         </a>
@@ -113,8 +104,19 @@
     <section class="news">
       <div>
         <a href="a">
-          <img src="yoga.jpg" alt="yoga pose">
-          <h5>Rubrik</h5>
+          <img src="fish.jpg" alt="clown fish">
+          <h5>New dive sites</h5>
+          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
+            Aenean commodo ligula eget dolor. Aenean massa. </p>
+        </a>
+      </div>
+    </section>
+
+    <section class="news">
+      <div>
+        <a href="a">
+          <img src="waterfall.jpg" alt="jungle waterfall">
+          <h5>Jungle Walk</h5>
           <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
             Aenean commodo ligula eget dolor. Aenean massa. </p>
         </a>
